# DFlow2024

./: .gitignore  .gitmodules  1run.sh  2run.sh  3run.sh  4run.sh  5run.sh  6run.sh  FreeStoreClient.py  arun.sh  image.py  install.sh  kill-docker.sh  output.py  read.py  run.sh  xpush.sh  yes  yes.pub  ypull.sh
Stone/: CMakeLists.txt  design.py  install_dependencies.sh  run.sh  xpull.sh
Stone/cmake/: FindCPR.cmake
Stone/scripts/: find-port-id.sh  master-kill-port.py  xport.sh
Stone/src/local_scheduler/: dispatcher.cc  dispatcher.h  function_manager.cc  function_manager.h  main.cc  workersp.cc  workersp.h
Stone/src/utils/: logging.cc  logging.h
benchmark/fileprocessing/: create_image.sh  repository.py
benchmark/generator/: translator.py
benchmark/wordcount/: create_image.sh  flat_workflow.yaml  merge.py  object_store_pb2.py  repository.py  test.py
docker/: analyze.py  debug.sh  run.sh
figures/: README.md
figures/FaaSFlow+DStore-50MB-6RPM-figure14/: draw.py  optimized_6rpm_50MB_2023_plus_DStore.csv
figures/all_tail_latency_figure10/: CFlow-raw-6rpm-50MB.csv  README.md  draw.py  (+3 more)
protocol/: FreeStoreClient.py  NaiveFreeStore.py  build.sh  hello.py  jsonToBytes.py  kv.py  local_client.py  naive.py  object_store.proto  object_store_pb2.py  object_store_pb2_grpc.py  proto.sh  useAst.py  usere.py
scripts/: .gitingore  README.md  after-worker-setup.sh  couchdb_starter.py  db_setup.bash  flask_server.sh  install_python_grpc.sh  kill-port.py  master-kill-port.py  master-run.sh  no_hop.sh  nohup.out  old_README.md  requirements.txt  run-lambda2.sh  run_local_store_server.sh  run_notification.sh  third_party.sh  worker-proxy.sh  worker-run-not-setup.sh  worker_setup.bash  ykill.sh
src/: my_log.py
(+197 files in other folders)
